@@ -5,6 +5,7 @@
 	- Fix for FreeBSD port make with dnscrypt and dnstap enabled.
 	- Fix #4206: support openssl 1.0.2 for TLS hostname verification,
 	  alongside the 1.1.0 and later support that is already there.
+	- Fixup openssl 1.0.2 compile
 
 6 December 2018: Wouter
 	- Fix dns64 allocation in wrong region for returned internal queries.
